Fixed styling issues on smaller screens

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,6 +12,9 @@
   flex-direction: column;
   align-items: center;
   height: auto;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   /*min-height: 87vh;*/
 }
 
